# hateval-trainer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_ablation.py
scripts/: download_nltk.py  examples.sh
scripts/scripts/: examples.sh
src/hateval_trainer/: __init__.py  cli.py  config.py  data.py  models.py  train.py
tests/: test_smoke.py
